testsuite/tests/grammar/invalid_unparser/pick-in-or.lkt
import lexer_example

grammar foo_grammar {
    @main_rule main_rule <- Root(or(
        pick("example" Identifier(@identifier))
        | Number(@number)
    ))
}
